feat(launchpad): add terminal entry to launchpad menu
Add new terminal option to the launchpad with corresponding icon and route. The terminal entry uses a dark gradient background to match its command-line interface theme.

--- a/src/renderer/src/i18n/locales/zh-cn.json
+++ b/src/renderer/src/i18n/locales/zh-cn.json
@@ -4615,6 +4615,7 @@
     "paintings": "绘画",
     "settings": "设置",
     "store": "助手库",
+    "terminal": "终端",
     "translate": "翻译"
   },
   "trace": {
