--- a/src/renderer/src/i18n/locales/zh-cn.json
+++ b/src/renderer/src/i18n/locales/zh-cn.json
@@ -2061,6 +2061,40 @@
       "not_supported": "不支持的文件类型 {{type}}"
     },
     "processing": "OCR 处理中...",
+    "provider": {
+      "config": {
+        "patch": {
+          "error": {
+            "failed": "更新配置失败"
+          }
+        }
+      },
+      "create": {
+        "error": {
+          "failed": "创建提供商失败"
+        }
+      },
+      "delete": {
+        "error": {
+          "failed": "删除提供商 {{provider}} 失败"
+        }
+      },
+      "get": {
+        "error": {
+          "failed": "获取提供商 {{provider}} 失败"
+        }
+      },
+      "list": {
+        "error": {
+          "failed": "获取提供商列表失败"
+        }
+      },
+      "update": {
+        "error": {
+          "failed": "更新提供商失败"
+        }
+      }
+    },
     "warning": {
       "provider": {
         "fallback": "已回退到 {{name}}，这可能导致问题"
