--- a/src/renderer/src/i18n/translate/ru-ru.json
+++ b/src/renderer/src/i18n/translate/ru-ru.json
@@ -1959,6 +1959,14 @@
     "rename": "переименовать",
     "rename_changed": "В связи с политикой безопасности имя файла было изменено с {{Original}} на {{final}}",
     "save": "Сохранить в заметки",
+    "search": {
+      "both": "[to be translated]:Name+Content",
+      "content": "[to be translated]:Content",
+      "found_results": "[to be translated]:Found {{count}} results (Name: {{nameCount}}, Content: {{contentCount}})",
+      "more_matches": "[to be translated]:more matches",
+      "searching": "[to be translated]:Searching...",
+      "show_less": "[to be translated]:Show less"
+    },
     "settings": {
       "data": {
         "apply": "приложение",
@@ -2053,6 +2061,40 @@
       "not_supported": "Неподдерживаемый тип файла {{type}}"
     },
     "processing": "Обработка OCR...",
+    "provider": {
+      "config": {
+        "patch": {
+          "error": {
+            "failed": "[to be translated]:Failed to update config"
+          }
+        }
+      },
+      "create": {
+        "error": {
+          "failed": "[to be translated]:Failed to create provider"
+        }
+      },
+      "delete": {
+        "error": {
+          "failed": "[to be translated]:Failed to delete provider {{provider}}"
+        }
+      },
+      "get": {
+        "error": {
+          "failed": "[to be translated]:Failed to get provider {{provider}}"
+        }
+      },
+      "list": {
+        "error": {
+          "failed": "[to be translated]:Failed to list providers"
+        }
+      },
+      "update": {
+        "error": {
+          "failed": "[to be translated]:Failed to update the provider"
+        }
+      }
+    },
     "warning": {
       "provider": {
         "fallback": "Возвращено к {{name}}, это может вызвать проблемы"
@@ -2107,6 +2149,8 @@
       "install_code_103": "Ошибка загрузки среды выполнения OVMS",
       "install_code_104": "Ошибка распаковки среды выполнения OVMS",
       "install_code_105": "Ошибка очистки среды выполнения OVMS",
+      "install_code_106": "[to be translated]:Failed to create run.bat",
+      "install_code_110": "[to be translated]:Failed to clean old OVMS runtime",
       "run": "Ошибка запуска OVMS:",
       "stop": "Ошибка остановки OVMS:"
     },
