fix(ocr): add missing error message for unavailable provider
Add "not_availabel" translation key and use it when provider is unavailable. Also update type name from ImageOcrProvider to OcrProvider to better reflect its usage.

--- a/src/renderer/src/i18n/locales/en-us.json
+++ b/src/renderer/src/i18n/locales/en-us.json
@@ -2052,6 +2052,7 @@
         "cannot_remove_builtin": "Cannot delete built-in provider",
         "existing": "The provider already exists",
         "get_providers": "Failed to get available providers",
+        "not_availabel": "Provide {{provider}} is not available",
         "not_found": "OCR provider does not exist",
         "update_failed": "Failed to update configuration"
       },
