feat(i18n): add provider unavailable message for multiple locales
Add translation key for provider unavailable status in zh-cn locale and placeholders for other locales

--- a/src/renderer/src/i18n/locales/zh-cn.json
+++ b/src/renderer/src/i18n/locales/zh-cn.json
@@ -2052,6 +2052,7 @@
         "cannot_remove_builtin": "不能删除内置提供商",
         "existing": "提供商已存在",
         "get_providers": "获取可用提供商失败",
+        "not_availabel": "{{provider}} 暂不可用",
         "not_found": "OCR 提供商不存在",
         "update_failed": "更新配置失败"
       },
