--- a/src/renderer/src/i18n/translate/ja-jp.json
+++ b/src/renderer/src/i18n/translate/ja-jp.json
@@ -2052,6 +2052,7 @@
         "cannot_remove_builtin": "組み込みプロバイダーは削除できません",
         "existing": "プロバイダーはすでに存在します",
         "get_providers": "利用可能なプロバイダーの取得に失敗しました",
+        "not_availabel": "[to be translated]:Provide {{provider}} is not available",
         "not_found": "OCRプロバイダーが存在しません",
         "update_failed": "更新構成に失敗しました"
       },
