--- a/src/renderer/src/i18n/locales/zh-tw.json
+++ b/src/renderer/src/i18n/locales/zh-tw.json
@@ -2052,6 +2052,7 @@
         "cannot_remove_builtin": "不能刪除內建提供者",
         "existing": "提供者已存在",
         "get_providers": "取得可用提供者失敗",
+        "not_availabel": "[to be translated]:Provide {{provider}} is not available",
         "not_found": "OCR 提供者不存在",
         "update_failed": "更新配置失敗"
       },
