--- a/src/renderer/src/i18n/translate/el-gr.json
+++ b/src/renderer/src/i18n/translate/el-gr.json
@@ -2052,6 +2052,7 @@
         "cannot_remove_builtin": "Δεν είναι δυνατή η διαγραφή του ενσωματωμένου παρόχου",
         "existing": "Ο πάροχος υπηρεσιών υπάρχει ήδη",
         "get_providers": "Αποτυχία λήψης διαθέσιμων παρόχων",
+        "not_availabel": "[to be translated]:Provide {{provider}} is not available",
         "not_found": "Ο πάροχος OCR δεν υπάρχει",
         "update_failed": "Αποτυχία ενημέρωσης της διαμόρφωσης"
       },
