--- a/src/renderer/src/i18n/translate/es-es.json
+++ b/src/renderer/src/i18n/translate/es-es.json
@@ -2052,6 +2052,7 @@
         "cannot_remove_builtin": "No se puede eliminar el proveedor integrado",
         "existing": "El proveedor ya existe",
         "get_providers": "Error al obtener proveedores disponibles",
+        "not_availabel": "[to be translated]:Provide {{provider}} is not available",
         "not_found": "El proveedor de OCR no existe",
         "update_failed": "Actualización de la configuración fallida"
       },
