--- a/src/renderer/src/i18n/translate/ru-ru.json
+++ b/src/renderer/src/i18n/translate/ru-ru.json
@@ -2052,6 +2052,7 @@
         "cannot_remove_builtin": "Не удается удалить встроенного поставщика",
         "existing": "Поставщик уже существует",
         "get_providers": "Не удалось получить доступных поставщиков",
+        "not_availabel": "[to be translated]:Provide {{provider}} is not available",
         "not_found": "Поставщик OCR отсутствует",
         "update_failed": "Обновление конфигурации не удалось"
       },
