feat(settings): single-file overwrite and name validation
Initialize single-file overwrite and name state with safe defaults
introduce a confirmation modal when enabling overwrite to warn users
about the behavioral change (fixed filename, overwriting, keeping only
the latest backup). Add onChange/onBlur handlers for the single-file
name input that trim and validate the filename (disallow invalid
characters, reserved Windows names, and overly long names) and show
toast errors when validation fails. Wire dispatch updates only after
confirmation or successful validation. Enhance help text for overwrite
and the filename field to clarify recommended usage and behavior.

--- a/src/renderer/src/i18n/locales/en-us.json
+++ b/src/renderer/src/i18n/locales/en-us.json
@@ -2900,7 +2900,27 @@
       },
       "backup": {
         "skip_file_data_help": "Skip backing up data files such as pictures and knowledge bases during backup, and only back up chat records and settings. Reduce space occupancy and speed up the backup speed.",
-        "skip_file_data_title": "Slim Backup"
+        "skip_file_data_title": "Slim Backup",
+        "singleFileOverwrite": {
+          "title": "Single File Overwrite Backup",
+          "help": "When auto backup is enabled and max backups is 1, use a fixed filename for each overwrite.",
+          "confirm": {
+            "title": "Enable Overwrite Backup",
+            "content1": "After enabling, auto backup will:",
+            "item1": "Use a fixed filename without timestamp",
+            "item2": "Overwrite the file with the same name each time",
+            "item3": "Keep only the latest backup file",
+            "note": "Note: This setting only takes effect when auto backup is enabled and max backups is 1"
+          }
+        },
+        "singleFileName": {
+          "title": "Custom Filename (Optional)",
+          "placeholder": "e.g., cherry-studio.<hostname>.<device>.zip",
+          "help": "• Leave empty to use default format: cherry-studio.[hostname].[deviceType].zip\n• Supported variables: {hostname} - hostname, {device} - device type\n• Unsupported characters: <>:\"/\\|?*\n• Maximum length: 250 characters",
+          "invalid_chars": "Filename contains invalid characters",
+          "reserved": "Filename is a system reserved name",
+          "too_long": "Filename is too long"
+        }
       },
       "clear_cache": {
         "button": "Clear Cache",
