--- a/src/renderer/src/i18n/locales/zh-tw.json
+++ b/src/renderer/src/i18n/locales/zh-tw.json
@@ -2052,7 +2052,7 @@
         "cannot_remove_builtin": "不能刪除內建提供者",
         "existing": "提供者已存在",
         "get_providers": "取得可用提供者失敗",
-        "not_availabel": "[to be translated]:Provide {{provider}} is not available",
+        "not_availabel": "提供商 {{provider}} 不可用",
         "not_found": "OCR 提供者不存在",
         "update_failed": "更新配置失敗"
       },
@@ -2066,33 +2066,33 @@
       "config": {
         "patch": {
           "error": {
-            "failed": "[to be translated]:Failed to update config"
+            "failed": "更新配置失敗"
           }
         }
       },
       "create": {
         "error": {
-          "failed": "[to be translated]:Failed to create provider"
+          "failed": "創建提供商失敗"
         }
       },
       "delete": {
         "error": {
-          "failed": "[to be translated]:Failed to delete provider {{provider}}"
+          "failed": "刪除提供商 {{provider}} 失敗"
         }
       },
       "get": {
         "error": {
-          "failed": "[to be translated]:Failed to get provider {{provider}}"
+          "failed": "獲取提供商 {{provider}} 失敗"
         }
       },
       "list": {
         "error": {
-          "failed": "[to be translated]:Failed to list providers"
+          "failed": "列出提供商失敗"
         }
       },
       "update": {
         "error": {
-          "failed": "[to be translated]:Failed to update the provider"
+          "failed": "更新提供商失敗"
         }
       }
     },
