feat(mermaid): add error handling and fix tool for mermaid diagrams
- Add mermaid_fix tool to handle and fix mermaid diagram errors
- Implement pending state tracking for async operations
- Add error callback to MermaidPreview component
- Update i18n strings for mermaid error handling
- Extend cache schema with pending_map for task tracking

--- a/src/renderer/src/i18n/locales/en-us.json
+++ b/src/renderer/src/i18n/locales/en-us.json
@@ -940,6 +940,11 @@
       }
     },
     "expand": "Expand",
+    "mermaid_fix": {
+      "failed": "Failed to fix",
+      "invalid_result": "Model returned invalid data. Please try again or try changing the quick model.",
+      "label": "Fix mermaid error"
+    },
     "more": "More",
     "run": "Run",
     "split": {
