--- a/src/renderer/src/i18n/locales/zh-tw.json
+++ b/src/renderer/src/i18n/locales/zh-tw.json
@@ -538,7 +538,7 @@
         "context": "清除上下文 {{Command}}"
       },
       "new_topic": "新話題 {{Command}}",
-      "paste_text_file_confirm": "[to be translated]:粘贴到输入框？",
+      "paste_text_file_confirm": "粘贴到输入框？",
       "pause": "暫停",
       "placeholder": "在此輸入您的訊息，按 {{key}} 傳送 - @ 選擇模型，/ 包含工具",
       "placeholder_without_triggers": "在此輸入您的訊息，按 {{key}} 傳送",
@@ -940,6 +940,11 @@
       }
     },
     "expand": "展開",
+    "mermaid_fix": {
+      "failed": "修復失敗",
+      "invalid_result": "模型傳回無效資料。請再試一次，或嘗試更換快速模型。",
+      "label": "修復 mermaid 錯誤"
+    },
     "more": "更多",
     "run": "運行代碼",
     "split": {
@@ -4229,7 +4234,7 @@
         "system": "系統代理伺服器",
         "title": "代理伺服器模式"
       },
-      "tip": "[to be translated]:支持模糊匹配(*.test.com,192.168.0.0/16)"
+      "tip": "支援模糊比對(*.test.com,192.168.0.0/16)"
     },
     "quickAssistant": {
       "click_tray_to_show": "點選工具列圖示啟動",
