--- a/src/renderer/src/i18n/translate/es-es.json
+++ b/src/renderer/src/i18n/translate/es-es.json
@@ -538,7 +538,7 @@
         "context": "Limpiar contexto {{Command}}"
       },
       "new_topic": "Nuevo tema {{Command}}",
-      "paste_text_file_confirm": "[to be translated]:粘贴到输入框？",
+      "paste_text_file_confirm": "¿Pegar en el cuadro de entrada?",
       "pause": "Pausar",
       "placeholder": "Escribe aquí tu mensaje...",
       "placeholder_without_triggers": "Escribe tu mensaje aquí, presiona {{key}} para enviar",
@@ -940,6 +940,11 @@
       }
     },
     "expand": "Expandir",
+    "mermaid_fix": {
+      "failed": "No se pudo corregir",
+      "invalid_result": "El modelo devolvió datos no válidos. Inténtalo de nuevo o prueba cambiando el modelo rápido.",
+      "label": "Corregir el error de mermaid"
+    },
     "more": "Más",
     "run": "Ejecutar código",
     "split": {
@@ -1961,12 +1966,12 @@
     "rename_changed": "Debido a políticas de seguridad, el nombre del archivo ha cambiado de {{original}} a {{final}}",
     "save": "Guardar en notas",
     "search": {
-      "both": "[to be translated]:名称+内容",
-      "content": "[to be translated]:内容",
-      "found_results": "[to be translated]:找到 {{count}} 个结果 (名称: {{nameCount}}, 内容: {{contentCount}})",
-      "more_matches": "[to be translated]:个匹配",
-      "searching": "[to be translated]:搜索中...",
-      "show_less": "[to be translated]:收起"
+      "both": "Nombre + contenido",
+      "content": "内容",
+      "found_results": "Se encontraron {{count}} resultados (nombre: {{nameCount}}, contenido: {{contentCount}})",
+      "more_matches": "un partido",
+      "searching": "Buscando...",
+      "show_less": "Minimizar"
     },
     "settings": {
       "data": {
@@ -2116,8 +2121,8 @@
       "install_code_103": "Error al descargar el tiempo de ejecución de OVMS",
       "install_code_104": "Error al descomprimir el tiempo de ejecución de OVMS",
       "install_code_105": "Error al limpiar el tiempo de ejecución de OVMS",
-      "install_code_106": "[to be translated]:创建 run.bat 失败",
-      "install_code_110": "[to be translated]:清理旧 OVMS runtime 失败",
+      "install_code_106": "Error al crear run.bat",
+      "install_code_110": "Error al limpiar el runtime antiguo de OVMS",
       "run": "Error al ejecutar OVMS:",
       "stop": "Error al detener OVMS:"
     },
@@ -4229,7 +4234,7 @@
         "system": "Proxy del sistema",
         "title": "Modo de proxy"
       },
-      "tip": "[to be translated]:支持模糊匹配(*.test.com,192.168.0.0/16)"
+      "tip": "Admite coincidencias difusas (*.test.com, 192.168.0.0/16)"
     },
     "quickAssistant": {
       "click_tray_to_show": "Haz clic en el icono de la bandeja para iniciar",
