fix(i18n): split fetch_complete into singular and plural forms
Update translation files to properly handle singular/plural cases for search results display

--- a/src/renderer/src/i18n/locales/en-us.json
+++ b/src/renderer/src/i18n/locales/en-us.json
@@ -1764,7 +1764,8 @@
     },
     "websearch": {
       "cutoff": "Truncating search content...",
-      "fetch_complete": "{{count}} search result(s)",
+      "fetch_complete_one": "{{count}} search result",
+      "fetch_complete_other": "{{count}} search results",
       "rag": "Executing RAG...",
       "rag_complete": "Keeping {{countAfter}} out of {{countBefore}} results...",
       "rag_failed": "RAG failed, returning empty results..."
