--- a/src/renderer/src/i18n/locales/zh-cn.json
+++ b/src/renderer/src/i18n/locales/zh-cn.json
@@ -1764,7 +1764,8 @@
     },
     "websearch": {
       "cutoff": "正在截断搜索内容...",
-      "fetch_complete": "{{count}} 个搜索结果",
+      "fetch_complete_one": "{{count}} 个搜索结果",
+      "fetch_complete_other": "{{count}} 个搜索结果",
       "rag": "正在执行 RAG...",
       "rag_complete": "保留 {{countBefore}} 个结果中的 {{countAfter}} 个...",
       "rag_failed": "RAG 失败，返回空结果..."
